message_macro/message_macro/tests/ui/unnamed_fields.rs
use message_macro::CustomAttributes;

#[derive(CustomAttributes)]
enum UnsupportedEnum {
    A,
    B,
}

fn main() {}
